[project]
name = "aai-sync"
version = "0.1.0"
description = ""
authors = [
    {name = "Alessandro De Salvo",email = "alessandro.desalvo@roma1.infn.it"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  'python-ldap',
]

[project.scripts]
aai-sync = "aai_sync.main:sync"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
